@@ -119,6 +119,7 @@ Wolfpack 12.9.13 Beta (CVS)
   - Added possibility to cut bone parts into usable bones using scissors.
   - Fixed potion kegs.
   - Added tilecolorz command. Same as tilecolor, but limited to one z coordinate.
+  - Added nukez command. Same as nuke, but limited to one z coordinate.
  * Misc. Changes:
   - FAQ Updates.
  * Known Issues, Bugs, and Missing Features:
